--- a/fb/main.css
+++ b/fb/main.css
@@ -508,6 +508,10 @@ button,
   cursor: pointer;
 }
 
+button, li{
+    cursor: default;
+}
+
 /**
  * Here you would add any of your custom component classes; stuff that you'd
  * want loaded *before* the utilities so that the utilities could still
